--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,5 +3,18 @@
 }
 
 body {
-  font-family: "PF Din Text Cond Pro";
+  margin: 0px;
+}
+
+.container {
+  max-width: 1176px;
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cards {
+  display: flex;
 }
